--- a/LabBook-menor.org
+++ b/LabBook-menor.org
@@ -1863,3 +1863,136 @@ df1 %>% head;
 extras automaticamente, assumindo que o data frame inicial tem apenas
 estados (linhas que começam por "State") gerados por =pj_dump= quando
 executado como indicado na sessão precendente.
+* 2017-02-07 Automatização da leitura de arquivos
+** Prerequisitos
+Os seguintes arquivos CSV foram gerados da seguinte forma:
+- em particular, atenção aos parâmetros passados a =pj_dump= (todos são obrigatórios)
+
+#+begin_src shell :results output
+cd exp7-NAS-cg_mg_ft-40threads
+for otf2 in $(find | grep otf2$); do
+    echo $otf2
+    DIR=$(dirname $otf2)
+    cd $DIR
+    ~/dev/akypuera3/src/otf2-omp-print/otf2ompprint2paje.pl traces.otf2 | ~/dev/pajeng/b/pj_dump --header --user-defined --no-imbrication | grep ^State | grep -e Imbrication -e omp > traces.csv
+    cd ..
+done
+#+end_src
+** Leitura em R (função de leitura)
+#+begin_src R :results output :session :exports both
+read_exp_gabriel <- function (filename)
+{
+   # read the file
+   df <- read.csv(filename, strip.white=TRUE);
+
+   # configuration for automatic data extraction
+   extra_start = 9;
+   extra_total = length(names(df)) - 8;
+   extra_half = extra_total/2;
+
+   # do the substraction automatically
+   for (i in c(extra_start:(extra_start+extra_half-1))){
+      x = i;
+      y = i+extra_half;
+      df[,x] = df[,y] - df[,x];
+   }
+
+   # remove the extra columns that are no longer needed
+   df <- df %>% select(1:(extra_start+extra_half-1));
+
+   # return the final data frame
+   df;
+}
+#+end_src
+** Testando a função de leitura (CG)
+#+begin_src R :results output :session :exports both
+df <- read_exp_gabriel ("exp7-NAS-cg_mg_ft-40threads/cg.B-scorep-40threads_exp7/traces.csv");
+df %>% head;
+#+end_src
+
+#+RESULTS:
+#+begin_example
+  State Container Type       Start         End   Duration Imbrication
+1 State      zero    S    3.120965    3.140518   0.019553           3
+2 State      zero    S    3.140518    3.709081   0.568563           4
+3 State      zero    S    3.709081  221.204541 217.495460           5
+4 State      zero    S  221.204541  221.224733   0.020192           4
+5 State      zero    S  221.224733  221.232337   0.007604           3
+6 State      zero    S 8024.934787 8024.941773   0.006986           4
+                             Value PAPI_TOT_INS PAPI_REF_CYC PAPI_L2_TCM
+1         !$omp parallel @cg.f:736         2007          509         213
+2               !$omp do @cg.f:736        18905          496         144
+3 !$omp implicit barrier @cg.f:739      2103867       168864         517
+4               !$omp do @cg.f:736         1794          354          69
+5         !$omp parallel @cg.f:736         1786          158          14
+6         !$omp parallel @cg.f:836         2017          111          46
+  PAPI_L2_TCA ru_utime ru_stime
+1         475        0        0
+2         466        0        0
+3        1080        0        0
+4         279        0        0
+5         119        0        0
+6         312        0        0
+#+end_example
+** Testando a função de leitura (MG)
+#+begin_src R :results output :session :exports both
+df <- read_exp_gabriel ("exp7-NAS-cg_mg_ft-40threads/mg.B-scorep-40threads_exp7/traces.csv");
+df %>% head;
+#+end_src
+
+#+RESULTS:
+#+begin_example
+  State Container Type      Start        End   Duration Imbrication
+1 State      zero    S   2.212986   2.228209   0.015223           3
+2 State      zero    S   2.228209  14.325622  12.097413           4
+3 State      zero    S  14.325622 225.070143 210.744521           5
+4 State      zero    S 225.070143 225.097661   0.027518           4
+5 State      zero    S 225.097661 225.105553   0.007892           3
+6 State      zero    S 225.489852 225.498132   0.008280           4
+                              Value PAPI_TOT_INS PAPI_REF_CYC PAPI_L2_TCM
+1         !$omp parallel @mg.f:1368         2007          309         235
+2               !$omp do @mg.f:1368      3287487        60450        8121
+3 !$omp implicit barrier @mg.f:1376      2103871       210158         849
+4               !$omp do @mg.f:1368         1797          461         212
+5         !$omp parallel @mg.f:1368         1789          168          18
+6         !$omp parallel @mg.f:1368         2011          188          41
+  PAPI_L2_TCA ru_utime ru_stime
+1         581        0        0
+2       41997        0        0
+3        1430     4000        0
+4         418        0        0
+5         110        0        0
+6         296        0        0
+#+end_example
+** Testando a função de leitura (FT)
+#+begin_src R :results output :session :exports both
+df <- read_exp_gabriel ("exp7-NAS-cg_mg_ft-40threads/ft.B-scorep-40threads_exp7/traces.csv");
+df %>% head;
+#+end_src
+
+#+RESULTS:
+#+begin_example
+  State Container Type      Start        End   Duration Imbrication
+1 State      zero    S   3.741356   3.757804   0.016448           3
+2 State      zero    S   3.757804 107.016384 103.258580           4
+3 State      zero    S 107.016384 334.541063 227.524679           5
+4 State      zero    S 334.541063 334.572829   0.031766           4
+5 State      zero    S 334.572829 334.581001   0.008172           3
+6 State      zero    S 334.760263 334.938401   0.178138           2
+                             Value PAPI_TOT_INS PAPI_REF_CYC PAPI_L2_TCM
+1         !$omp parallel @ft.f:190         2007          323         231
+2               !$omp do @ft.f:190     15634063       733138       23650
+3 !$omp implicit barrier @ft.f:200      2103871       191228         880
+4               !$omp do @ft.f:190         1796          487         194
+5         !$omp parallel @ft.f:190         1789          163          22
+6                compute_indexmap_         8798         3069         604
+  PAPI_L2_TCA ru_utime ru_stime
+1         584        0        0
+2      503543    20000     8000
+3        1545     4000        0
+4         358        0        0
+5         137        0        0
+6        1538        0        0
+#+end_example
+** Sumário
+Resta agrupar as regiões apropriadamente.
